--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     margin: auto;
     height: 250px;
-    overflow: auto;
+    overflow-y: scroll;
     text-align: center;
     font-weight: bold;
     font-style: 1.2rem;
