--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -5,7 +5,7 @@
     overflow-y: scroll;
     text-align: center;
     font-weight: bold;
-    font-style: 1.2rem;
+    font-size: 1.2rem;
 }
 
 @media (min-width: 500px) and (max-height: 400px) {
